# tuned-switcher

./: .gitignore  CMakeLists.txt  README.md  snapcraft.yaml
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: clang.yml  codeql.yml  fedora.yml  flatpak.yml  gcc.yml  linux.yml  ubuntu.yml
.github/workflows/flatpak/: org.easycoding.TunedSwitcher.yml
.reuse/: dep5
assets/: CMakeLists.txt
assets/desktop/: applet.desktop.in  autorun.desktop.in  gui.desktop.in  org.easycoding.TunedSwitcher.Applet.desktop  org.easycoding.TunedSwitcher.Gui.desktop  tuned-switcher.desktop.in
assets/i18n/: i18n_update.sh  tuned-switcher_en.ts  tuned-switcher_ru.ts  tuned-switcher_tr.ts
assets/manpage/: tuned-switcher.md  tuned-switcher.md.in
assets/metainfo/: org.easycoding.TunedSwitcher.metainfo.xml  tuned-switcher.metainfo.xml.in
cmake/: External.cmake  FindDoxygen.cmake  FindPandoc.cmake  FindQt.cmake  FindTestHelpers.cmake  Settings.cmake  Variables.cmake
docs/: README.md  configuration.md  features.md  fedora-installation.md  flatpak-installation.md  generic-installation.md  installation.md  modes.md  packages.md  screenshots.md  settings.md  startup.md  using-application.md
packaging/fedora/: tuned-switcher.spec
packaging/flatpak/: org.easycoding.TunedSwitcher.yml
resources/: tuned-switcher.qrc
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  trayicon.cpp  trayicon.h  tunedmanager.h
src/app/: CMakeLists.txt  main.cpp  resources.qrc
src/app/about/: about.cpp  about.h  about.ui
src/app/guihelpers/: guihelpers.cpp  guihelpers.h
src/app/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui
src/app/settings/: settings.cpp  settings.h  settings.ui
src/app/trayicon/: trayicon.cpp  trayicon.h  trayicon.hpp
src/gui/: CMakeLists.txt  main.cpp  resources.qrc
src/gui/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/lib/: CMakeLists.txt
src/lib/appconstants/: appconstants.cpp  appconstants.cpp.in  appconstants.h  appconstants.h.in  appconstants.hpp.in
src/lib/autorunfile/: autorunfile.cpp  autorunfile.h
src/lib/autorunmanager/: autorunmanager.cpp  autorunmanager.h
src/lib/autorunportal/: autorunportal.cpp  autorunportal.h
src/lib/debugsettings/: debugsettings.cpp  debugsettings.h
src/lib/dummyservice/: dummyservice.cpp  dummyservice.h
src/lib/guihelpers/: guihelpers.cpp  guihelpers.h
src/lib/logcategories/: logcategories.cpp  logcategories.h  logcategories.hpp
src/lib/logmanager/: logmanager.cpp  logmanager.h
src/lib/notificationsmanager/: dbusconverters.h  dbusconverters.hpp  notificationsmanager.cpp  notificationsmanager.h  notificationsmanager.hpp
src/lib/portalrequest/: portalrequest.cpp  portalrequest.h
src/lib/portaltypes/: portaltypes.cpp  portaltypes.h
src/lib/servicemanager/: servicemanager.cpp  servicemanager.h
src/lib/settingsmanager/: settingsmanager.cpp  settingsmanager.h
src/lib/systemdservice/: systemdservice.cpp  systemdservice.h
src/lib/translationmanager/: translationmanager.cpp  translationmanager.h  translationmanager.hpp
src/lib/tunedmanager/: tunedmanager.cpp  tunedmanager.h  tunedmanager.hpp
src/lib/tunedtypes/: tunedtypes.cpp  tunedtypes.h  tunedtypes.hpp
src/tray/: CMakeLists.txt  main.cpp  resources.qrc
src/tray/trayicon/: trayicon.cpp  trayicon.h
